test/files/errors/if_missing_else.scm
; Test: If with missing else - should return exit code 84
(if #t 1)
